# bitcoincompress

./: .gitignore  CMakeLists.txt
cmake/: Initialize.cmake  TestSuite.cmake
libraries/: CMakeLists.txt
libraries/bkbase/: CMakeLists.txt  README.md
libraries/bkbase/include/bkbase/: endian.h  exception.h  formats.h  hash.h  hex.h  logging.h  serialize.h  stream.h
libraries/bkbase/include/bkbase/serialize/: class_macro.h  compact_size.h  core.h  numeric.h  shared_ptr.h  varint.h  vector.h
libraries/bkbase/include/crypto/: context.h  hasher.h
libraries/bkbase/src/: formats.cpp  hash.cpp  hex.cpp  logging.cpp  stream.cpp
libraries/bkbase/src/crypto/: context.cpp
libraries/bkbase/tests/: endian_tests.cpp  exception_tests.cpp  formats_tests.cpp  hash_tests.cpp  hex_tests.cpp  logging_tests.cpp  serialize_tests.cpp
libraries/chain/: CMakeLists.txt
libraries/chain/include/chain/: block.h  transaction.h
libraries/chain/src/: block.cpp
libraries/chain/tests/: block_tests.cpp
libraries/compress/: CMakeLists.txt
libraries/compress/include/compress/: amount.h  block.h  parser.h  pubkey.h  pubkeydb.h  scriptdb.h  signature.h
libraries/compress/src/: amount.cpp  parser.cpp  pubkey.cpp  pubkeydb.cpp  signature.cpp
libraries/compress/tests/: amount_tests.cpp  pubkey_tests.cpp  pubkeydb_tests.cpp  signature_tests.cpp
libraries/core/: CMakeLists.txt
libraries/core/include/: bigint.h  block.h  config.h  hash.h  hex.h  logging.h  serialize.h  transaction.h
libraries/core/include/core/: block.h  transaction.h
libraries/core/include/crypto/: context.h
libraries/core/src/: block.cpp  hash.cpp  hex.cpp  serialize.cpp  transaction.cpp
libraries/core/tests/: block_tests.cpp  hash_tests.cpp  hex_tests.cpp  serialize_tests.cpp  transaction_tests.cpp
libraries/helper/: CMakeLists.txt
libraries/helper/include/helper/: block_file.h  output_pool.h  scan.h  statistics_pool.h
libraries/helper/src/: block_file.cpp  scan.cpp
libraries/script/: CMakeLists.txt
libraries/script/include/script/: condition.h  exception.h  machine.h  opcode.h  parser.h  signature.h  stack.h  type.h
libraries/script/src/: condition.cpp  machine.cpp  opcode.cpp  parser.cpp  signature.cpp  stack.cpp  type.cpp
libraries/script/tests/: main.cpp  parser_tests.cpp  type_tests.cpp
libraries/utils/: CMakeLists.txt
libraries/utils/include/: block_loader.h
libraries/utils/src/: block_loader.cpp
libraries/utils/tests/: block_loader_tests.cpp
program/: CMakeLists.txt
program/blockpacker/: CMakeLists.txt
program/blockpacker/include/: block_pool.h  compress.h  compress_amount.h  database.h
program/blockpacker/src/: block_pool.cpp  compress.cpp  compress_amount.cpp  main.cpp
program/blockscan/: CMakeLists.txt
program/blockscan/src/: block_file.cpp  block_file.h  main.cpp  main.h  output_pool.h  pubkey_pool.h  scan.h
program/createtransaction/: CMakeLists.txt
program/createtransaction/src/: main.cpp
